kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend-service
  name: backend-service
  namespace: ibmhack
spec:
  ports:
  - name: backend-service
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: backend
  sessionAffinity: None
  type: ClusterIP
