kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend-service
  name: frontend-service
  namespace: ibmhack
spec:
  ports:
  - name: frontend-service
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: frontend
  sessionAffinity: None
  type: ClusterIP
